# DLOps_project

./: .gitignore  app.py  dvc.yaml  main.py  ouptut_result.json  pyproject.toml  scores.json  steps.txt
artifacts/prepare_callbacks/tensorboard_log_dir/tb_logs_2026-05-01-11-00-07/train/: events.out.tfevents.1777613417.HP.3580.0.v2
artifacts/prepare_callbacks/tensorboard_log_dir/tb_logs_2026-05-01-11-00-07/validation/: events.out.tfevents.1777613641.HP.3580.1.v2
artifacts/prepare_callbacks/tensorboard_log_dir/tb_logs_at_2026-05-02-10-44-38/train/: events.out.tfevents.1777698882.HP.3768.0.v2
artifacts/prepare_callbacks/tensorboard_log_dir/tb_logs_at_2026-05-02-10-45-39/train/: events.out.tfevents.1777698942.HP.3296.0.v2
artifacts/prepare_callbacks/tensorboard_log_dir/tb_logs_at_2026-05-02-10-45-39/validation/: events.out.tfevents.1777699074.HP.3296.1.v2
artifacts/prepare_callbacks/tensorboard_log_dir/tb_logs_at_2026-05-04-10-59-25/train/: events.out.tfevents.1777872570.HP.22060.0.v2
artifacts/prepare_callbacks/tensorboard_log_dir/tb_logs_at_2026-05-04-10-59-25/validation/: events.out.tfevents.1777872768.HP.22060.1.v2
config/: config.yaml
research/: 05_model_evaluation.ipynb  prepare_base_model.ipynb  prepare_callbacks.ipynb  training.ipynb
src/cnnClassifier/components/: prepare_base_model.py  training.py
src/cnnClassifier/config/: config.yaml  configuration.py
src/cnnClassifier/entity/: config_entity.py
templates/: index.html
(+2 files in other folders)
